fix: text message width on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -955,6 +955,10 @@ svg {
     max-width: 95%;
   }
 
+  .azure {
+    max-width: 65dvw;
+  }
+
   .azure.imgmessage {
     max-width: 85dvw;
   }
